update jvm opts to match copper 5h